# open-quantum-AI-for-legal-reasoning

./: CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_COMPLETION_SUMMARY.md  LICENSE  PROJECT_SUMMARY.md  README.md  TRAINING_AND_TESTING_GUIDE.md  docker-compose.yml  implementation-summary.md  pyproject.toml  pytest.ini  quantum-legal-all-usecases-analysis.md  quantum-legal-llm-design.md  requirements-dev.txt  requirements.txt
config/: data_sources.json  default.yaml
data/datasets/: README.md
data/datasets/consumer_disputes/: sample_cases.json
data/datasets/gst_disputes/: sample_cases.json
data/datasets/legal_aid/: sample_cases.json
data/datasets/motor_vehicle_claims/: sample_cases.json
data/datasets/property_disputes/: sample_cases.json
docs/: ARCHITECTURE.md  IMPLEMENTATION_GUIDE.md  QUANTUM_ARCHITECTURE.md  README.md
docs/api/: README.md
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.tsx  index.css
frontend/src/components/Auth/: ProtectedRoute.tsx
frontend/src/components/Layout/: Layout.tsx
frontend/src/contexts/: AuthContext.tsx  ThemeContext.tsx
k8s/: configmap.yaml  namespace.yaml
scripts/: deploy.sh  fetch_real_data.py  generate_datasets.py  test_datasets.py  train_with_real_data.py
src/xqelm/: __init__.py
src/xqelm/api/: auth.py  main.py  models.py  rate_limiter.py
src/xqelm/classical/: knowledge_base.py  preprocessor.py  response_generator.py
src/xqelm/core/: explainability.py  quantum_legal_model.py
src/xqelm/data/: real_data_fetcher.py
src/xqelm/database/: __init__.py  models.py  neo4j_client.py  redis_client.py
src/xqelm/quantum/: attention.py  embeddings.py  reasoning.py
src/xqelm/training/: enhanced_trainer.py
src/xqelm/use_cases/: bail_application.py  cheque_bounce.py  consumer_dispute.py  gst_dispute.py  legal_aid.py  motor_vehicle_claims.py  property_dispute.py
src/xqelm/utils/: config.py  data_loader.py  synthetic_data_generator.py
tests/: conftest.py  test_api_integration.py  test_gst_dispute.py  test_legal_aid.py
